user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-usv1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: usv1
  template:
    metadata:
      labels:
        app: usv1
    spec:
      containers:
      - name: usv1-ctn
        image: gurmindersingh5/flask:usv1
        ports:
        - containerPort: 8082
