data-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-service
  labels:
    app: dsv1
spec:
  type: NodePort
  selector:
    app: dsv1  
  ports:
  - port: 8081  
    targetPort: 8081
