user-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels:
    app: usv1
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '8082'
spec:
  type: NodePort
  selector:
    app: usv1  
  ports:
  - port: 8082
    targetPort: 8082
